--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Geometrias Não Euclidianas</title>
+  <title>Saga Povo do Ar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
