--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Saga Povo do Ar</title>
+  <title>Triologia Povo do Ar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 id="titulo">Geometrias Não Euclidianas</h1>
+    <h1 id="titulo">HITÓRIA DA TRIOLOGIA DO POVO DO AR</h1>
     <img src="bolha 2.jpeg" alt="bolha congelando, superficie esférica">
     <p class="texto1">O conhecimento escolar de <strong>Geometria</strong>, por muito tempo nos trouxe a <b>Geometria de Euclides</b>.
     Aprendemos o que é um ponto, uma reta e um plano.
