--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="titulo">HITÓRIA DA TRIOLOGIA DO POVO DO AR</h1>
-    <img src="bolha 2.jpeg" alt="bolha congelando, superficie esférica">
+    <img src="bolha 2.jpeg" alt="">
     <p class="texto1">O conhecimento escolar de <strong>Geometria</strong>, por muito tempo nos trouxe a <b>Geometria de Euclides</b>.
     Aprendemos o que é um ponto, uma reta e um plano.
     A partir destes elementos, construímos <mark>Figuras Geométricas Planas e Formas Espaciais.</mark></p>
