--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1 id="titulo">HITÓRIA DA TRIOLOGIA DO POVO DO AR</h1>
-    <img src="bolha 2.jpeg" alt="">
+    <img src="bolha 2.jpeg" alt="O povo do ar é a nova saga de livros da escritora Holly Black. 
+
+    Nessa saga, vamos acompanhar a história de Jude Duarte, uma garota comum que descobre um universo novo, o dos feéricos (fadas). Ela é obrigada a entrar nesse mundo com 7 anos após o assassinato de seus pais. ">
     <p class="texto1">O conhecimento escolar de <strong>Geometria</strong>, por muito tempo nos trouxe a <b>Geometria de Euclides</b>.
     Aprendemos o que é um ponto, uma reta e um plano.
     A partir destes elementos, construímos <mark>Figuras Geométricas Planas e Formas Espaciais.</mark></p>
